8246770: Atomic::add() with 64 bit value fails to link on 32-bit platforms

Reviewed-by: egahlin